Fix release gradle & bat file